--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
     
 }
 
+
 /* start navigation */
 
 .header_area .main-menu .navbar .navbar-brand{
@@ -54,6 +55,14 @@ body{
 /* end navigation */
 
 /* Banner area */
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    
+   
+}
 
 .site-main .site-banner{
     background: url(/img/background.jpg) no-repeat 50% 100%;
@@ -72,7 +81,7 @@ body{
 
 .site-main .site-banner .site-title h1{
     font-size: 3rem;
-    padding-top: 25%;   
+    padding-top: 25%; 
 }
 
 .site-main .site-banner .site-title h4{
@@ -230,6 +239,7 @@ body{
 
 .footer-text{
     color: rgb(149, 172, 166);
+    font-size: 18px;
 }
 
 footer a{
