franklintian.club v2.0 complete

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,13 @@ body{
 
 
 /* start navigation */
+.header_area .main-menu .navbar a{
+    color: rgb(149, 172, 166);
+    font-size: 17px;
+}
 
 .header_area .main-menu .navbar .navbar-brand{
-    padding: 0 2rem 0 4rem;
+    padding-left: 4rem;
 }
 
 .header_area .main-menu .navbar{
